update db initializer